--- a/sources/_VS/DeviceOSC/FPGA.vcxproj
+++ b/sources/_VS/DeviceOSC/FPGA.vcxproj
@@ -33,6 +33,9 @@
     <ClCompile Include="..\..\Device\src\Hardware\FSMC.cpp" />
     <ClCompile Include="..\..\Device\src\Hardware\GPIO.cpp" />
     <ClCompile Include="..\..\Device\src\Hardware\Hardware.cpp" />
+    <ClCompile Include="..\..\Device\src\Hardware\stm32\stm32.cpp" />
+    <ClCompile Include="..\..\Device\src\Hardware\stm32\stm437.cpp" />
+    <ClCompile Include="..\..\Device\src\Hardware\stm32\Timer4XX.cpp" />
     <ClCompile Include="..\..\Device\src\Hardware\Timer.cpp" />
     <ClCompile Include="..\..\Device\src\libs\CMSIS\system_stm32f4xx.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
@@ -57,11 +60,6 @@
     <ClCompile Include="..\..\Device\src\Utils\Decoder.cpp" />
     <ClCompile Include="..\..\Device\src\Utils\MathOSC.cpp" />
     <ClCompile Include="..\..\Device\src\Utils\StringUtils.cpp" />
-    <ClCompile Include="..\..\libs\common\Hardware\stm32\4XX\stm437.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-    </ClCompile>
-    <ClCompile Include="..\..\libs\common\Hardware\stm32\4XX\Timer4XX.cpp" />
-    <ClCompile Include="..\..\libs\common\Hardware\stm32\stm32.cpp" />
     <ClCompile Include="..\..\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal_dac.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
@@ -99,6 +97,9 @@
     <ClInclude Include="..\..\Device\src\Hardware\FSMC.h" />
     <ClInclude Include="..\..\Device\src\Hardware\GPIO.h" />
     <ClInclude Include="..\..\Device\src\Hardware\Hardware.h" />
+    <ClInclude Include="..\..\Device\src\Hardware\stm32\stm32.h" />
+    <ClInclude Include="..\..\Device\src\Hardware\stm32\stm437.h" />
+    <ClInclude Include="..\..\Device\src\Hardware\stm32\Timer4XX.h" />
     <ClInclude Include="..\..\Device\src\Hardware\Timer.h" />
     <ClInclude Include="..\..\Device\src\Keyboard\Buttons.h" />
     <ClInclude Include="..\..\Device\src\libs\HAL\stm32f4xx_hal_conf.h" />
@@ -122,9 +123,6 @@
     <ClInclude Include="..\..\Device\src\Utils\Decoder.h" />
     <ClInclude Include="..\..\Device\src\Utils\MathOSC.h" />
     <ClInclude Include="..\..\Device\src\Utils\StringUtils.h" />
-    <ClInclude Include="..\..\libs\common\Hardware\stm32\4XX\stm437.h" />
-    <ClInclude Include="..\..\libs\common\Hardware\stm32\4XX\Timer4XX.h" />
-    <ClInclude Include="..\..\libs\common\Hardware\stm32\stm32.h" />
     <ClInclude Include="..\..\libs\common\Utils\Math.h" />
     <ClInclude Include="..\..\libs\common\_VS\cmsis_armcc.h" />
     <ClInclude Include="..\..\libs\common\_VS\cmsis_armcc_V6.h" />
