--- a/sources/Panel/PanelOSC.uvprojx
+++ b/sources/Panel/PanelOSC.uvprojx
@@ -1414,12 +1414,12 @@
             <File>
               <FileName>Math.cpp</FileName>
               <FileType>8</FileType>
-              <FilePath>..\libs\common\Utils\Math.cpp</FilePath>
+              <FilePath>.\src\Utils\Math.cpp</FilePath>
             </File>
             <File>
               <FileName>Math.h</FileName>
               <FileType>5</FileType>
-              <FilePath>..\libs\common\Utils\Math.h</FilePath>
+              <FilePath>.\src\Utils\Math.h</FilePath>
             </File>
           </Files>
         </Group>
