--- a/sources/Device/DeviceOSC.uvprojx
+++ b/sources/Device/DeviceOSC.uvprojx
@@ -2067,16 +2067,6 @@
               <FilePath>.\src\Utils\MathOSC.h</FilePath>
             </File>
             <File>
-              <FileName>Math.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\libs\common\Utils\Math.h</FilePath>
-            </File>
-            <File>
-              <FileName>Math.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>..\libs\common\Utils\Math.cpp</FilePath>
-            </File>
-            <File>
               <FileName>Decoder.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\src\Utils\Decoder.cpp</FilePath>
@@ -2095,6 +2085,16 @@
               <FileName>StringUtils.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\src\Utils\StringUtils.h</FilePath>
+            </File>
+            <File>
+              <FileName>Math.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Utils\Math.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>Math.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Utils\Math.h</FilePath>
             </File>
           </Files>
         </Group>
