--- a/sources/_VS/PanelOSC/PanelOSC.vcxproj.filters
+++ b/sources/_VS/PanelOSC/PanelOSC.vcxproj.filters
@@ -189,6 +189,9 @@
     <ClInclude Include="..\..\Panel\src\Hardware\stm32\Timer4XX.h">
       <Filter>Hardware\stm32</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\Panel\src\Utils\Math.h">
+      <Filter>Utils</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal.c">
@@ -286,6 +289,9 @@
     </ClCompile>
     <ClCompile Include="..\..\Panel\src\Hardware\stm32\Timer4XX.cpp">
       <Filter>Hardware\stm32</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Panel\src\Utils\Math.cpp">
+      <Filter>Utils</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
